Add an id attribute for search-engine-optimization

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,7 +28,7 @@
     <nav class="hero"></nav>
 
     <nav class="content">
-        <nav class="search-engine-optimization">
+        <nav id="search-engine-optimization" class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -78,7 +78,7 @@
             </p>
         </nav>
     </nav>
-    
+
     <nav class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
