--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,11 +28,12 @@
     <nav class="hero"></nav>
 
     <nav class="content">
-        <nav class="search-engine-optimization">
+        <nav id="search-engine-optimization" class="search-engine-optimization">
             <img 
                 src="./assets/images/search-engine-optimization.jpg" 
                 class="float-left" 
-                alt="Notebook with ideas"/>
+                alt="Notebook with ideas"
+            />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
@@ -98,7 +99,7 @@
             </p>
         </nav>
     </nav>
-    
+
     <nav class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
