Add comments to CSS and HTMl and grouped the CSS selectors.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -7,6 +7,7 @@
     <title>website</title>
 </head>
 
+<!-- Switch out <div> tag with <nav> tag to let the browser know this is a navigation menu.-->
 <body>
     <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
@@ -26,6 +27,8 @@
     </nav>
 
     <nav class="hero"></nav>
+
+<!-- Add alt attribute to the <img> tags in 'content' incase the image cannot be seen. -->
 
     <nav class="content">
         <nav id="search-engine-optimization" class="search-engine-optimization">
@@ -64,6 +67,8 @@
             </p>
         </nav>
     </nav>
+
+<!-- Add alt attribute to the <img> tags in 'benefits' incase the image cannot be seen. -->s
 
     <nav class="benefits">
         <nav class="benefit-lead">
