--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </section>
     </nav>
 
+<!-- What should I change the <nav> tag to? -->    
     <nav class="hero"></nav>
 
 <!-- 
@@ -45,7 +46,11 @@
             />
             <h2>Search Engine Optimization</h2>
             <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                The dominance of mobile internet use means that users are 
+                searching for the right business as they travel, shop, or 
+                sit on their couch at home. Search Engine Optimization (SEO) 
+                allows you to increase your visibility and find the right 
+                customers for your business.
             </p>
         </article>
 
@@ -57,7 +62,11 @@
             />
             <h2>Online Reputation Management</h2>
             <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                The web is full of opinions, and some of these can be negative. 
+                Social media allows anyone with an internet connection to say whatever 
+                they want about your business. Online Reputation Management gives you 
+                the control over what potential customers see when they search for your 
+                business.
             </p>
         </article>
 
@@ -69,7 +78,10 @@
             />
             <h2>Social Media Marketing</h2>
             <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                Social media continues to have a sizable influence on buying 
+                habits. Social media marketing helps you determine which 
+                platforms are suited to your brand, using analytics to find the 
+                right markets and increase your lead generation.
             </p>
         </article>
     </main>
@@ -87,7 +99,8 @@
                 alt="Gear to cash"
             />
             <p>
-                Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
+                Inbound strategies for lead generation require less work 
+                for your business, bringing customers directly to your website.
             </p>
         </article>
 
@@ -98,7 +111,8 @@
                 alt="Lightbulb head"
             />
             <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
+                Users find your business through paid and organic searches, 
+                increasing the search ranking and visibility for your business.
             </p>
         </article>
 
@@ -109,7 +123,9 @@
                 alt="Gear with coins"
             />
             <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
+                As the search ranking for your business increases, 
+                your advertising costs decrease, and you no longer 
+                need to advertise your page.
             </p>
         </article>
     </aside>
