switched tags for class="hero"

--- a/index.html
+++ b/index.html
@@ -29,8 +29,12 @@
         </section>
     </nav>
 
-<!-- What should I change the <nav> tag to? -->    
-    <nav class="hero"></nav>
+<!-- 
+    What should I change the <nav> tag to? 
+    Tried <section> because it's an element that define parts of content
+    Nothing seems to change.
+-->    
+    <section class="hero"></section>
 
 <!-- 
     Use <main> tag to define the central piece of the web application.
