clean up index.html

--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 
 <!-- 
     Switch out the <div> tag with the <nav> tag to let the browser know this is a navigation menu.
-    Use the <section> element for content list, not <nav> tag.
+    Remove <section> element from <nav>. 
 -->
 <body>
     <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <section>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -26,7 +25,6 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </section>
     </nav>
 
 <!-- 
