Edits in HTML, CSS, and README

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
 <!-- 
     Switch out the <div> tag with the <nav> tag to let the browser know this is a navigation menu.
-    Remove <section> element from <nav>. 
 -->
 <body>
     <nav class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <section>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -25,12 +25,11 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
+        </section>
     </nav>
 
 <!-- 
-    What should I change the <nav> tag to? 
-    Tried <section> because it's an element that define parts of content
-    Nothing seems to change.
+    Change the <nav> tag to <section>.
 -->    
     <section class="hero"></section>
 
