--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 
 <!-- 
-    Switch out the <div> tag with the <nav> tag to let the browser know this is a navigation menu.
+    Change the <div> tag with the <nav> tag to let the browser know this is a navigation menu.
+    Put <nav class="header" under the <h1>.
 -->
 <body>
-    <nav class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <nav class="header">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -26,7 +27,7 @@
                 </li>
             </ul>
         </nav>
-    </nav>
+    </header>
 
 <!-- 
     Change the <nav> tag to <section>.
