After installing Prettier, I went to Settings and select Editor:Format On Save. When I went to save my code,a new line appears. cmd+z gets rid of the line but this comes up in the HTML file, the README, and CSS file. Once I de-select the Editor, the issue went away.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
   <!-- 
     Change the <div> tag with the <nav> tag to let the browser know this is a navigation menu.
-    Put <nav class="header" under the <h1>.
--->
+    Restructure lines 14 - 30 to follow HTML Semantic Page Structure.
+    -->
   <body>
     <nav class="header">
       <h1>Hori<span class="seo">seo</span>n</h1>
@@ -19,9 +19,7 @@
             <a href="#search-engine-optimization">Search Engine Optimization</a>
           </li>
           <li>
-            <a href="#online-reputation-management"
-              >Online Reputation Management</a
-            >
+            <a href="#online-reputation-management">Online Reputation Management</a>
           </li>
           <li>
             <a href="#social-media-marketing">Social Media Marketing</a>
@@ -32,14 +30,14 @@
 
     <!-- 
     Change the <nav> tag to <section>.
--->
+    -->
     <section class="hero"></section>
 
     <!-- 
     Use <main> tag to define the central piece of the web application.
     Use <article> tag for blocks of information.
     Add <alt> attribute to the <img> tags in 'content' incase the image cannot be seen. 
--->
+    -->
     <main class="content">
       <article
         id="search-engine-optimization"
@@ -98,7 +96,7 @@
     Change the <nav> tag to the <aside> tag to display information on the side.
     Switch the <nav> tags inside the <aside> tag to <article> tag.
     Add the <alt> attribute to the <img> tags in 'benefits' incase the image cannot be seen. 
--->
+    -->
     <aside class="benefits">
       <article class="benefit-lead">
         <h3>Lead Generation</h3>
